php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42368 Incorrect error message displayed by pg_escape_string
Submitted: 2007-08-21 23:05 UTC Modified: 2007-08-22 22:40 UTC
From: vesselin at awcreator dot com Assigned: iliaa (profile)
Status: Closed Package: PostgreSQL related
PHP Version: 5CVS-2007-08-21 (snap) OS: Linux
Private report: No CVE-ID: None
 [2007-08-21 23:05 UTC] vesselin at awcreator dot com
Description:
------------
pg_escape_string() displays an incorrect error message

Reproduce code:
---------------
pg_escape_string (array ());


Expected result:
----------------
Warning: pg_escape_string() expects parameter 1 to be string, array given in Command line code on line 1

Actual result:
--------------
Warning: pg_escape_string() expects exactly 2 parameters, 1 given in Command line code on line 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-08-22 22:40 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC