Fixed bug #42368 (Incorrect error message displayed by pg_escape_string)